--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         code highlighting, math, and speaker notes.
       </aside>
     </section>
+    <section>
+      <h3>Contact</h3>
+      <p>Email: 24f1002241@ds.study.iitm.ac.in</p>
+    </section>
 
     <!-- 2) Markdown slide -->
     <section data-markdown>
