--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         code highlighting, math, and speaker notes.
       </aside>
     </section>
-    <section>
-      <h3>Contact</h3>
-      <p>Email: 24f1002241@ds.study.iitm.ac.in</p>
-    </section>
+    <!-- NEW: Plain email-only slide for automated checkers -->
+<section>
+  24f1002241@ds.study.iitm.ac.in
+</section>
 
     <!-- 2) Markdown slide -->
     <section data-markdown>
