--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
     <!-- NEW: Plain email-only slide for automated checkers -->
 <section>
-  24f1002241@ds.study.iitm.ac.in
+  <h2>24f1002241@ds.study.iitm.ac.in</h2>
 </section>
 
     <!-- 2) Markdown slide -->
