--- a/index.html
+++ b/index.html
@@ -107,6 +107,17 @@ ORDER BY quarter;
       <p class="muted">Press <kbd>S</kbd> to open speaker notes in presenter view.</p>
     </section>
 
+    <!-- NEW: Script & noscript block -->
+    <section>
+      <script>
+          const email = "24f1002241@ds.study.iitm.ac.in";
+          document.write('<p>Prepared by: ' + email + '</p>');
+      </script>
+      <noscript>
+          <p>Prepared by: 24f1002241@ds.study.iitm.ac.in</p>
+      </noscript>
+    </section>
+
   </div>
 </div>
 
